# OpenClaw_Screen_Driver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Gemini_CLI_Guide.md  PROGRESS.md  Project_bluepring.md  Project_blueprint.md  README.md  config.yaml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
api/: server.py
core/: __init__.py  accessibility.py  capture.py  config.py  detection.py  embeddings.py  executor.py  florence.py  model_cache.py  ocr.py  omniparser.py  types.py  vision.py  watcher.py  yoloe.py
docs/superpowers/plans/: 2026-03-13-omniparser-integration.md  2026-03-13-wave1-yoloe-detection.md
docs/superpowers/specs/: 2026-03-13-omniparser-integration-design.md
executor/: __init__.py  pathfinder.py  runner.py  validator.py
hub/: __init__.py  manifest.py  scanner.py  schema.py
mapper/: __init__.py  diff.py  export.py  graph.py  layers.py  orchestrator.py  pathfinder.py  runner.py  validator.py
recorder/: __init__.py  dialog.py  element_types.py  overlay.py  refine_dialog.py  session.py  smart_detect.py  step_ui.py  tui.py
scripts/: benchmark_yoloe_ui.py
tests/: __init__.py  conftest.py  test_cascade.py  test_detection_provider.py  test_e2e_login.py  test_export.py  test_florence.py  test_main_refine.py  test_milestone.py  test_model_cache.py  test_omniparser.py  test_orchestrator.py  test_pathfinder.py  test_refine.py  test_smart_detect.py  test_step_replay.py  test_tui.py  test_wave2.py  test_yoloe_text_prompt.py
tests/fixtures/: login.html
