[project]
name = "openclaw-screen-driver"
version = "0.1.0"
description = "AI-powered screen automation framework"
requires-python = ">=3.11"
dependencies = [
    "mss>=9.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "PyQt6>=6.5",
]

[project.optional-dependencies]
# Core AI features (CLIP embeddings + FAISS similarity search)
embeddings = [
    "transformers>=4.36",
    "faiss-cpu>=1.7",
    "torch>=2.1",
]
# YOLO-E visual grounding (dormant — kept for reference)
yoloe = [
    "ultralytics>=8.3",
]
# VLM vision analysis via LiteLLM proxy
vlm = [
    "openai>=1.0.0",
]
# Windows-only accessibility bridge
windows = [
    "pywinauto>=0.6.8",
]
# REST API server
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]
# TUI launcher (rich-based interactive menu)
tui = [
    "rich>=13.0",
]
# OmniParser YOLOv8 icon detection
omniparser = [
    "ultralytics>=8.3",
]
# Florence-2 captioning
florence = [
    "transformers>=4.36",
    "torch>=2.1",
]
# Model weight management
model-cache = [
    "huggingface-hub>=0.20",
]
# Full detection stack (OmniParser + Florence-2 + model cache)
detection = [
    "openclaw-screen-driver[omniparser,florence,model-cache]",
]
# Everything (install all optional features)
all = [
    "openclaw-screen-driver[detection,embeddings,vlm,windows,api,tui]",
]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.1",
]

[project.scripts]
ocsd = "main:main"

[tool.setuptools.packages.find]
include = ["api*", "core*", "hub*", "mapper*", "recorder*", "skills*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
